--- a/index.css
+++ b/index.css
@@ -252,7 +252,7 @@
     color: var(--color-black);
     font-family: var(--font-inter);
   }
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 780px) {
     .header-child {
         position: absolute;
         top: 65px;
@@ -357,8 +357,10 @@
       }
       .brand1 {
         position: absolute;
-        top: -500px;
-        left: 180px;
+        top: -450px;
+        left: 115px;
+        width: 150px;
+        font-size: x-large;
       }
       .g-shock-logo-1-icon,
       .rolex-logo-design2-1-icon {
@@ -370,19 +372,19 @@
         object-fit: cover;
       }
       .rolex-logo-design2-1-icon{
-        top: -450px;
-        left: 220px;
+        top: -350px;
+        left: 200px;
         width: 150px;
         height: 100px;
       }
       .g-shock-logo-1-icon {
-        top: -450px;
-        left: 20px;
+        top: -350px;
+        left: 5px;
         width: 100px;
         height: 100px;
       }
       .seiokologo-1-icon{
-        top: -450px;
+        top: -350px;
         height: 100px;
         width: 100px;
         left: 120px;
@@ -405,22 +407,22 @@
         display: inline-block;
         margin-right: 10px;
         position: absolute;
-        top: -200px;
+        top: 30px;
         left: 70px;
         background-color: var(--color-black);
-        width: 250px;
-        height: 360px;
+        width: 230px;
+        height: 200px;
       }
       .watch-new-arrival-item {
         left: 800px;
       }
       .rolexnewarrival1-2-icon {
         position: absolute;
-        top: -150px;
-        left: 100px;
+        top: 40px;
+        left: 125px;
         max-width: 100%;
-        width: 192px;
-        height: 210px;
+        width: 120px;
+        height: 135px;
         object-fit: cover;
       }
       .watch-new-arrival-inner {
@@ -450,8 +452,8 @@
       }
       .rolex-mens- {
         position: absolute;
-        top: 100px;
-        left: 100px;
+        top: 180px;
+        left: 90px;
       }
       .rolex-hj-120,
       .rolex-womens- {
@@ -482,7 +484,8 @@
         width: 100%;
       }
       .harga15{
-        left: 135px;
+        top: 210px;
+        left: 125px;
       }
       .harga17{
         left: 910px;
@@ -490,27 +493,34 @@
     
       .group-child {
         position: absolute;
-        top: -450px;
+        top: -380px;
         left: 0;
         background-color: var(--color-black);
-        width: 2100px;
+        width: 1000px;
         height: 200px;
       }
       .about-us10,
       .contact-us9,
       .locations8 {
         position: absolute;
-        left: 40px;
+        top: -400px;
+        left: 82px;
         cursor: pointer;
+        font-size: large;
       }
       .locations8{
-        top: -430px;
+        top: -300px;
+        width: 194.97px;
+        left: 30px;
       }
       .contact-us9{
-        top: -400px;
+        top: -350px;
+        width: 200px;
+        left: 30px;
       }
       .about-us10{
-        top: -350px;
+        top: -250px;
+        left: 30px;
       }
       
       .rectangle-parent {
@@ -531,7 +541,7 @@
         background-color: var(--color-whitesmoke);
         max-width: 100%;
         width: 100%;
-        height: 1024px;
+        height: 780px;
         overflow: auto;
         text-align: left;
         font-size: var(--font-size-21xl);
