--- a/contactUs.css
+++ b/contactUs.css
@@ -1,9 +1,9 @@
 body {
-    background-color: rgb(232, 232, 232);
+    background-color: rgb(162, 161, 161);
 }
 #form{
     width: 30%;
-    height: 45rem;
+    height: 50rem;
     background-color: white;
     display: flex;
     flex-direction: column;
@@ -15,6 +15,15 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.country{
+    width: 100%;
+    height: 2rem;
+    border-radius: 10px;
+    border: 0.5px rgba(0, 0, 0, 0.25) solid;
+    padding-inline-start: .5rem;
+    box-sizing: border-box;
 }
 
 .form-field {
@@ -62,15 +71,15 @@ body {
     height: 3rem;
     background-color: rgb(0, 115, 255);
     border: 0.5px rgba(0, 0, 0, 0.25) solid;
-    border-radius: 15px;
+    border-radius: 10px;
     color: white;
     font-size: large;
     font-weight: bold;
     cursor: pointer;
-    margin-top: 1.5rem;
+    margin-top: 3.0rem;
 }
 
 #register-button:hover {
-    background-color: rgb(0, 80, 179);
+    background-color: rgb(145, 166, 191);
     transition: 300ms;
 }
