--- a/contactUs.css
+++ b/contactUs.css
@@ -83,3 +83,91 @@ body {
     background-color: rgb(145, 166, 191);
     transition: 300ms;
 }
+
+@media screen and (max-width: 768px) {
+    .header{
+        margin-top: 150px;
+    }
+    #form{
+        width: 100%;
+        height: 60rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 1rem;
+        box-sizing: border-box;
+        border-radius: 15px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    
+    .country{
+        width: 100%;
+        height: 2rem;
+        border-radius: 10px;
+        border: 0.5px rgba(0, 0, 0, 0.25) solid;
+        padding-inline-start: .5rem;
+        box-sizing: border-box;
+    }
+    
+    .form-field {
+        margin-top: 1rem;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        row-gap: .5rem;
+    }
+    
+    .form-field > label {
+        font-weight: bold;
+    }
+    
+    .form-field > input {
+        height: 2rem;
+        border-radius: 8px;
+        border: 0.5px rgba(0, 0, 0, 0.25) solid;
+        padding-inline-start: .5rem;
+        box-sizing: border-box;
+    }
+    
+    .form-field > input:focus {
+        outline: none;
+    }
+    
+    .form-field > textarea {
+        border-radius: 8px;
+        border: 0.5px rgba(0, 0, 0, 0.25) solid;
+        padding-inline-start: .5rem;
+        box-sizing: border-box;
+        resize: none;
+    }
+    
+    #agree-form {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        flex-direction: row-reverse;
+        column-gap: 1rem;
+    }
+    
+    #register-button {
+        width: 60%;
+        height: 3rem;
+        background-color: rgb(0, 115, 255);
+        border: 0.5px rgba(0, 0, 0, 0.25) solid;
+        border-radius: 10px;
+        color: white;
+        font-size: large;
+        font-weight: bold;
+        cursor: pointer;
+        margin-top: 3.0rem;
+    }
+    
+    #register-button:hover {
+        background-color: rgb(145, 166, 191);
+        transition: 300ms;
+    }
+    
+}
