--- a/location.css
+++ b/location.css
@@ -36,6 +36,7 @@
   }
   .group-child16 {
     position: absolute;
+    top: 0;
     bottom: 0;
     left: 0;
     background-color: var(--color-black);
