--- a/index.css
+++ b/index.css
@@ -547,7 +547,7 @@
         top: 200px;
         left: 0;
         background-color: var(--color-black);
-        width: 1000px;
+        width: 100%;
         height: 200px;
       }
       .about-us10,
