--- a/index.css
+++ b/index.css
@@ -547,7 +547,7 @@
         top: 200px;
         left: 0;
         background-color: var(--color-black);
-        width: 100%;
+        width: 768px;
         height: 200px;
       }
       .about-us10,
