--- a/aboutUs.css
+++ b/aboutUs.css
@@ -9,8 +9,10 @@
   }
   .about-us7 {
     font-family: 'Lato', sans-serif;
-  font-family: 'Montagu Slab', serif;
-  font-family: 'Noto Sans', sans-serif;
+    font-family: 'Montagu Slab', serif;
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
+    font-family: 'Playfair Display', serif;
     position: absolute;
     top: 127px;
     left: 920px;
