--- a/index.css
+++ b/index.css
@@ -1,10 +1,12 @@
+body{
+  overflow-x: hidden;
+}
 .header-child {
     position: absolute;
     top: 65px;
     left: 0;
     background-color: var(--color-black);
-    max-width: 200%;
-    width: 200%;
+    width: 110%;
     height: 80%;
   }
   .rolexhomepage-1-icon {
@@ -226,7 +228,7 @@
     top: 0;
     left: 0;
     background-color: var(--color-black);
-    width: 2100px;
+    width: 2040px;
     height: 200px;
   }
   .about-us10,
