--- a/aboutUs.css
+++ b/aboutUs.css
@@ -15,7 +15,7 @@
     font-family: 'Playfair Display', serif;
     position: absolute;
     top: 127px;
-    left: 920px;
+    left: 930px;
   }
   .watchhgods-is-a {
     margin: 0;
@@ -49,7 +49,7 @@
     top: 0;
     left: 0;
     background-color: var(--color-black);
-    width: 135%;
+    width: 148%;
     height: 200px;
   }
   .about-us8,
@@ -102,6 +102,29 @@
     color: var(--color-black);
     font-family: var(--font-inter);
   }
+  .about-us9,
+  .contact-us8,
+  .locations7,
+  .products1 {
+  font-size: x-large;
+  font-family: 'Playfair Display', serif;
+  position: absolute;
+  top: 50px;
+  right: 70px;
+  cursor: pointer;
+}
+.contact-us8,
+.locations7,
+.products1 {
+  right: 200px;
+}
+.contact-us8,
+.products1 {
+  right: 350px;
+}
+.products1 {
+  right: 500px;
+} 
   @media screen and (max-width : 780px){
     .watch-store-1 {
         top: 199px;
@@ -204,4 +227,27 @@
         color: var(--color-black);
         font-family: var(--font-inter);
       }
+.about-us9,
+.contact-us8,
+.locations7,
+.products1 {
+  font-size: medium;
+  font-family: 'Playfair Display', serif;
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  cursor: pointer;
+}
+.contact-us8,
+.locations7,
+.products1 {
+  right: 100px;
+}
+.contact-us8,
+.products1 {
+  right: 180px;
+}
+.products1 {
+  right: 270px;
+}
   }
