--- a/contactUs.css
+++ b/contactUs.css
@@ -1,6 +1,3 @@
-body {
-    background-color: rgb(0, 0, 0);
-}
 #form{
     width: 30%;
     height: 50rem;
@@ -83,8 +80,105 @@ body {
     background-color: rgb(145, 166, 191);
     transition: 300ms;
 }
+.rectangle-parent34 {
+    position: absolute;
+    top: 100px;
+    left: 0px;
+    width: 1443px;
+    height: 223px;
+  }
+.group-child43 {
+    position: absolute;
+    top: 1000px;
+    left: -80px;
+    background-color: black;
+    width: 3000px;
+    height: 220px;
+}
+.about-us18,
+.contact-us18,
+.locations18 {
+    position: absolute;
+    cursor: pointer;
+    color: rgb(255, 255, 255);
+    font-size: large;
+}
+.about-us18 {
+    top: 1150px;
+    left: 100px;
+  }
+  .contact-us18 {
+    left: 100px;
+    top: 1100px;
+    width: 225.69px;
+  }
+  .locations18 {
+    top: 1050px;
+    width: 194.97px;
+    left: 100px;
+  }
+  .about-us9,
+  .contact-us8,
+  .locations7,
+  .products1 {
+  font-size: x-large;
+  font-family: 'Playfair Display', serif;
+  position: absolute;
+  top: 50px;
+  right: 70px;
+  cursor: pointer;
+}
+.contact-us8,
+.locations7,
+.products1 {
+  right: 200px;
+}
+.contact-us8,
+.products1 {
+  right: 350px;
+}
+.products1 {
+  right: 500px;
+} 
+
+
+  .form {
+    position: relative;
+    background-color: var(--color-whitesmoke);
+    width: 100%;
+    height: 1024px;
+    overflow: auto;
+    text-align: left;
+    font-size: var(--font-size-13xl);
+    color: var(--color-white);
+    font-family: var(--font-inter);
+  }
+  
 
 @media screen and (max-width: 768px) {
+    .about-us9,
+    .contact-us8,
+    .locations7,
+    .products1 {
+        font-size: medium;
+        font-family: 'Playfair Display', serif;
+        position: absolute;
+        top: 10px;
+        right: 30px;
+        cursor: pointer;
+        }
+        .contact-us8,
+        .locations7,
+        .products1 {
+            right: 50px;
+        }
+        .contact-us8,
+        .products1 {
+            right: 180px;
+        }
+        .products1 {
+            right: 270px;
+        }
     .header{
         margin-top: 150px;
     }
@@ -102,6 +196,7 @@ body {
         left: 50%;
         transform: translate(-50%, -50%);
     }
+    
     
     .country{
         width: 100%;
@@ -169,5 +264,19 @@ body {
         background-color: rgb(145, 166, 191);
         transition: 300ms;
     }
+    .about-us18 {
+        top: 1150px;
+        left: 50px;
+      }
+      .contact-us18 {
+        left: 50px;
+        top: 1100px;
+        width: 225.69px;
+      }
+      .locations18 {
+        top: 1050px;
+        width: 194.97px;
+        left: 50px;
+      }
     
 }
