--- a/products.css
+++ b/products.css
@@ -14,7 +14,7 @@
 }
 .g-shock-logo,
 .seiokologo{
-  left: 810px;
+  left: 850px;
   width: 320px;
   height: 180px;
 }
@@ -26,16 +26,17 @@
 }
 .group-child,
 .our-brand-product {
+  font-family: 'Playfair Display', serif;
   position: absolute;
   top: 209px;
-  left: 750px;
+  left: 830px;
 }
 .group-child {
     position: absolute;
     top: 0;
     left: 0;
     background-color: var(--color-black);
-    width: 2100px;
+    width: 2280px;
     height: 220px;
 }
 .about-us,
@@ -81,6 +82,29 @@
   color: var(--color-black);
   font-family: var(--font-inter);
 }
+.about-us9,
+.contact-us8,
+.locations7,
+.products1 {
+  font-size: x-large;
+  font-family: 'Playfair Display', serif;
+  position: absolute;
+  top: 50px;
+  right: 70px;
+  cursor: pointer;
+}
+.contact-us8,
+.locations7,
+.products1 {
+  right: 200px;
+}
+.contact-us8,
+.products1 {
+  right: 350px;
+}
+.products1 {
+  right: 500px;
+}
 
 @media screen and (max-width: 768px) {
 .g-shock-logo,
@@ -88,7 +112,7 @@
 .seiokologo{
   position: absolute;
   top: 140px;
-  left: 40px;
+  left: 60px;
   width: 280px;
   height: 150px;
   object-fit: cover;
@@ -99,7 +123,7 @@
 }
 .g-shock-logo,
 .seiokologo{
-  left: 40px;
+  left: 60px;
   width: 280px;
   height: 150px;
 }
@@ -113,8 +137,8 @@
 .our-brand-product {
   position: absolute;
   font-size: xx-large;
-  top: 60px;
-  left: 40px;
+  top: 95px;
+  left: 50px;
 }
 .group-child {
     position: absolute;
@@ -166,5 +190,28 @@
   font-size: var(--font-size-29xl);
   color: var(--color-black);
   font-family: var(--font-inter);
+}
+.about-us9,
+.contact-us8,
+.locations7,
+.products1 {
+  font-size: medium;
+  font-family: 'Playfair Display', serif;
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  cursor: pointer;
+}
+.contact-us8,
+.locations7,
+.products1 {
+  right: 100px;
+}
+.contact-us8,
+.products1 {
+  right: 180px;
+}
+.products1 {
+  right: 270px;
 }
 }
